# abe

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ACTIX.md  example.env  test.db
client/src/: lib.rs
dashboard/: build.sh  package-lock.json  package.json
dashboard/ame-src/: Cargo.toml  README  build.sh
dashboard/ame-src/src/: editor.scss
dashboard/public/: index.html
dashboard/src/: App.svelte  routes.js
dashboard/src/routes/: Dashboard.svelte  Modal.svelte  Sidebar.svelte
dashboard/src/routes/Editor/: Editor.svelte
dashboard/src/routes/Posts/: Posts.svelte  PostsFilters.svelte
migrations/2020-05-07-101303_create_posts/: up.sql
migrations/2020-11-08-143726_create_users_table/: up.sql
migrations/2021-06-10-081220_create_posts/: up.sql
migrations/2022-01-08-225952_create_comments/: up.sql
public/css/: blog.css  blog.min.css
public/js/: common.js  common.min.js  post.js  post.min.js  terminal.js  terminal.min.js
server/: Cargo.toml  test.db
server/migrations/2020-05-07-153708_users/: up.sql
server/src/: db.rs
server/src/templates/: login.html  post_page.html  post_page_2.html
src/: artisan.rs  branca_session.rs  db.rs  errors.rs  handlers.rs  main.rs  template.rs  validate.rs
src/db/: comments.rs  mod.rs  models.rs  posts.rs  schema.rs  users.rs
src/handlers/: blog.rs  comments.rs  dashboard.rs  mod.rs  posts.rs  users.rs
src/mails/: mod.rs  user.rs
src/middlewares/: session.rs
src/models/: comments.rs  mod.rs  posts.rs  users.rs
src/templates/: admin_panel.html  blog.rs  dashboard.rs  editor.html  home.html  mail.rs  mod.rs  post_page.html  post_page_2.html
src/websockets/: comments.rs  mod.rs  notification.rs
templates/: blog_home.html  blog_post.html  blog_profile.html  blog_register_login.html  blog_reset_password.html  dashboard_login.html  mail.html
