[package]
name = "actix-diesel-sqlite"
version = "0.1.0"
authors = ["Florian <florian.zebidi@icaretech.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
listenfd = "0.3"

actix-web = "2.0.0"
actix-service = "1.0.5"
actix-session = "0.3"
actix-rt = "1.1.1"
actix-files = "0.2.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

derive_more = "0.15"
diesel = { version = "^1.1.0", features = ["sqlite", "chrono"] }
dotenv = "0.9.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
rand = "0.7.3"
bcrypt = "0.7"
branca = "0.9.0"
ring = "0.16.13"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.5"
failure = "0.1.8"

ramhorns = "0.5"

validator = "0.10"
validator_derive = "0.10"

env_logger = "0.7.1"
log = "0.4.0"