[package]
name = "skeleton-api"
version = "0.1.0"
authors = ["Aldebaran <e.k.florian@gmail.com>"]
edition = "2018"

default-run = "api"

[[bin]]
name = "api"
path = "src/main.rs"

#[[bin]]
#name = "artisan"
#path = "src/artisan.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix = "0.13.0"
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
actix-service = "2.0.2"
actix-files = "0.6.1"

r2d2 = "0.8.9"
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2"] }
log = "0.4.11"
env_logger = "0.8.2"
dotenv = "0.15.0"

serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
derive_more = "0.99.11"

uuid = { version = "0.8.1", features = ["serde", "v4"] }
rand = "0.7.3"
bcrypt = "0.9.0"
branca = "0.10.0"
ring = "0.16.18"
time = "0.3.11"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.8"
tokio = {version = "1.19.2", features = ["full"] }
failure = "0.1.8"

validator = { version = "0.12.0", features = ["derive"] }

structopt = { version = "0.3", default-features = false }

lettre = "0.9"
lettre_email = "0.9"


ramhorns = "0.11.0"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
syntect = "4.4"
ammonia = "3.1.3"
