[package]
name = "skeleton-api"
version = "0.1.0"
authors = ["Aldebaran <e.k.florian@gmail.com>"]
edition = "2018"

default-run = "api"

[[bin]]
name = "api"
path = "src/main.rs"

#[[bin]]
#name = "artisan"
#path = "src/artisan.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix = "0.13.0"
actix-web = "4.1.0"
actix-web-actors = "4.1.0"
actix-service = "2.0.2"
actix-files = "0.6.1"

r2d2 = "0.8.10"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
log = "0.4.17"
env_logger = "0.9.0"
dotenv = "0.15.0"

serde = "1.0.139"
serde_json = "1.0.82"
serde_derive = "1.0.139"
derive_more = "0.99.17"

uuid = { version = "1.1.2", features = ["serde", "v4"] }
rand = "0.8.5"
bcrypt = "0.13.0"
branca = "0.10.1"
ring = "0.16.20"
time = "0.3.11"
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
tokio = {version = "1.19.2", features = ["full"] }
failure = "0.1.8"

validator = { version = "0.15.0", features = ["derive"] }

structopt = { version = "0.3.26", default-features = false }

lettre = "0.10.0"
lettre_email = "0.9.4"

ramhorns = "0.14.0"
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
syntect = "5.0.0"
ammonia = "3.2.0"
