[package]
name = "yew-app"
version = "0.1.0"
authors = ["Florian <florian.zebidi@icaretech.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
css-in-rust = { version = "^0.5.0", features = ["yew_integration"] }
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlBodyElement',
  'HtmlDocument',
  'Node',
  'NodeList',
  'Window',
  'console',
  'CssStyleDeclaration'
]

[profile.release]
lto = true
opt-level = 'z'